Move schema to samples